--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,13 @@
-[frontend]
+192.168.99.68
+
+fontend]
 192.168.14.22
 192.168.33.15
 [backend]
 192.168.55.63
 192.168.56.88
 198.168.23.32
-
 192.168.25.69
+[roboshop:children]
+frontend
+backend
