--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 192.168.99.68
 
-[fontend]
+[frontend]
 192.168.14.22
 192.168.33.15
 [backend]
@@ -11,3 +11,5 @@
 [roboshop:children]
 frontend
 backend
+[web]
+98.81.124.60
