--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -1,5 +1,6 @@
 - name: hello world
   hosts: web
   tasks:
-  ansible.builtin.debug:
-    msg: "hello world!"
+    - name: print hello message
+      ansible.builtin.debug:
+        msg: "hello world!"
