--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -4,3 +4,6 @@
     - name: print hello message
       ansible.builtin.debug:
         msg: hello world
+    - name: print hello message
+      ansible.builtin.debug:
+        msg: hello my love
