--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -7,3 +7,10 @@
     - name: print hello message
       ansible.builtin.debug:
         msg: hello my love
+  tasks:
+    - name: ping the server
+      ansible.builtin.ping:
+      ansible.builtin.debug:
+        msg: "server is accessible"
+
+  
