--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -1,5 +1,5 @@
 - name: print hello world
-  hosts: local
+  hosts: local,web
   tasks:
     - name: print hello message
       ansible.builtin.debug:
