--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -14,7 +14,7 @@
         msg: "server is accessible"
 - name: install nginx
   hosts: web
-  bacome: yes
+  become: yes
   tasks:
     - name: installing nginx
       ansible.builtin.package:
