--- a/02-sample.yaml
+++ b/02-sample.yaml
@@ -20,4 +20,7 @@
       ansible.builtin.package:
         name: nginx
         state: present
-       
+    - name: uninstalling nginx
+      ansible.builtin.package:
+        name: nginx
+        state: absent
