--- a/05-prompt.yaml
+++ b/05-prompt.yaml
@@ -1,6 +1,6 @@
 - name: prompt variables
   hosts: local
-  vars_prompts:
+  vars_prompt:
   - name: username
     prompt: enter username
     private: false
