--- a/08-data-types.yaml
+++ b/08-data-types.yaml
@@ -14,7 +14,7 @@
     - Ansible
   tasks:
   - name: print variables
-    ansible.buitin.debug:
+    ansible.builtin.debug:
       msg: 
       Programe: {{PROGRAME}}
       duration: {{duration}}
