--- a/08-data-types.yaml
+++ b/08-data-types.yaml
@@ -15,7 +15,7 @@
   tasks:
   - name: print variables
     ansible.builtin.debug:
-      msg: 
+      msg: |
       Programe: {{PROGRAME}}
       duration: {{duration}}
       details: {{DETAILS}}
