--- a/09-conditions.yaml
+++ b/09-conditions.yaml
@@ -4,6 +4,7 @@
   vars:
     IS_LIVE: true
   tasks:
+    name: check live or not
     ansbile.buitin.debug:
       msg: "yes, it is live"
     when: IS_LIVE
