--- a/09-conditions.yaml
+++ b/09-conditions.yaml
@@ -4,7 +4,7 @@
   vars:
     IS_LIVE: true
   tasks:
-    name: check live or not
+  - name: check live or not
     ansible.builtin.debug:
       msg: "yes, it is live"
     when: IS_LIVE
