--- a/09-conditions.yaml
+++ b/09-conditions.yaml
@@ -8,3 +8,7 @@
     ansible.builtin.debug:
       msg: "yes, it is live"
     when: IS_LIVE
+  - name: check live or not
+    ansible.builtin.debug:
+      msg: "No, it is not live"
+    when: IS_LIVE
