--- a/Roboshop/roboshop.yaml
+++ b/Roboshop/roboshop.yaml
@@ -28,5 +28,5 @@
       when: action == create 
     
     - name: pring the output
-      ansible.buitin.debug:
+      ansible.builtin.debug:
         msg: "{{ ec2_info }}""
