--- a/08-data-types.yaml
+++ b/08-data-types.yaml
@@ -8,7 +8,7 @@
     DETAILS:                     # map / dictionary
       MONTHS: 4
       TRAINER: "Shiva"
-    TOPICS:                      # list
+    TOPICS:                      # list it will start- or []
       - linux
       - shell
       - Ansible
