--- a/filters.yaml
+++ b/filters.yaml
@@ -3,7 +3,15 @@
   connection: local
   vars:
     Topics: Ansible, linux, shell
+    tagsMap:
+    name: ansible
+    project: roboshop
+    component: catalogue
   tasks:
   - name: convert into list
     ansible.builtin.debug:
-      msg: "{{ Topics | split (',') }}"
+      msg: "{{ Topics | split (',') }}"  # convert string to list
+      
+  - name: convert map to list
+    ansible.builtin.debug:
+      msg: "{{ tagsMap | dict2items }}"
