--- a/filters.yaml
+++ b/filters.yaml
@@ -7,11 +7,31 @@
       name: ansible
       project: roboshop
       component: catalogue
+    LIST:
+       [
+        {
+            "key": "name",
+            "value": "ansible"
+        },
+        {
+            "key": "project",
+            "value": "roboshop"
+        },
+        {
+            "key": "component",
+            "value": "catalogue"
+        }
+    ]
+}
+
   tasks:
-  - name: convert into list
+  - name: convert string to list
     ansible.builtin.debug:
       msg: "{{ Topics | split (',') }}"  # convert string to list
 
   - name: convert map to list
     ansible.builtin.debug:
       msg: "{{ tagsMap | dict2items }}"
+  - name: convert list to map
+    ansible.builtin. debug:
+      msg: "{{ LIST | items2dict }}"
