--- a/filters.yaml
+++ b/filters.yaml
@@ -7,7 +7,7 @@
       name: ansible
       project: roboshop
       component: catalogue
-    LIST:
+    tagslist:
       [
         {
             "key": "name",
@@ -31,6 +31,7 @@
   - name: convert map to list
     ansible.builtin.debug:
       msg: "{{ tagsMap | dict2items }}"
+
   - name: convert list to map
     ansible.builtin. debug:
-      msg: "{{ LIST | items2dict }}"
+      msg: "{{ tagslist | items2dict }}"
