--- a/filters.yaml
+++ b/filters.yaml
@@ -7,8 +7,7 @@
       name: ansible
       project: roboshop
       component: catalogue
-    tagslist:
-      [
+    tagslist: [
         {
             "key": "name",
             "value": "ansible"
